--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>STEP</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/setti-logo.png">
+  <link rel="icon" type="image/x-icon" href="assets/step_sete.png">
 </head>
 <body>
   <app-root></app-root>
